--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
         </nav>
 
         <section>
+            <img src="imgs/perfil.jpeg" alt="Foto de perfil de Rui Santos" id="portrait">
             <div class="sec">
                 <h1 class="nome">RUI SANTOS</h1>
                 <h2 class="subtitulo">WEB DEVELOPER UNDER CONSTRUCTION</h2>
                 <h2 class="spinner"><i class="fas fa-spinner"></i></h2>
             </div>
+            <img src="imgs/perfil.jpeg" alt="Foto de perfil de Rui Santos" id="landscape">
             
-            <img src="imgs/perfil.jpeg" alt="Foto de perfil de Rui Santos">
         </section>
 
         <section>
